@@ -171,10 +171,19 @@ int main
 	config->value("config/disk/data_path",data_path,EXULT_DATADIR);
 	cout << "Data path = " << data_path << endl;
 	add_system_path("<DATA>", data_path.c_str());
-	if (!U7exists("<DATA>/exult.flx") && U7exists("data/exult.flx"))
+	if (!U7exists("<DATA>/exult.flx"))
 		{
-		add_system_path("<DATA>", "data");
-		cout << "Using local 'data' directory" << endl;
+		add_system_path("<DATA>", EXULT_DATADIR);
+		if (!U7exists("<DATA>/exult.flx"))
+			{
+			add_system_path("<DATA>", "data");
+			if(!U7exists("<DATA>/exult.flx"))
+				{
+				// We've tried them all...
+				cerr << "Could not find 'exult.flx' anywhere." << endl;	
+				exit(-1);
+				}
+			}
 		}
 	add_system_path("<STATIC>", "static");
 	add_system_path("<GAMEDAT>", "gamedat");
