@@ -1,3 +1,7 @@
+2000-11-09  Tristan Tarrant <nadir@users.sourceforge.net>
+
+	* exult.cc: try harder to find 'exult.flx'.
+
 2000-11-08  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* actors.cc: Trying to fix weapon clipping.
